# envguard

./: README.md  pyproject.toml
envguard/: __init__.py  cli.py  reporter.py  rules.py  scanner.py
examples/: example.env
