[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "envguard"
version = "1.0.0"
description = "Environment Variable Security Auditor - Detect sensitive info leaks in .env files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "gitstq"}
]
keywords = [
    "security",
    "environment-variables",
    "secrets",
    "audit",
    "cli",
    "devops"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
envguard = "envguard.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/envguard"
Repository = "https://github.com/gitstq/envguard"
Issues = "https://github.com/gitstq/envguard/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["envguard*"]

[tool.setuptools.package-data]
envguard = ["py.typed"]
